--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:name="android.permission.SCHEDULE_EXACT_ALARM"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,12 +31,12 @@
                 <action android:name="android.intent.action.MY_ALARM" />
             </intent-filter>
         </receiver>
+        <activity
+            android:name=".AlarmScreen"
+            android:exported="false"/>
 
         <activity
             android:name=".Profile"
-            android:exported="false" />
-        <activity
-            android:name=".VerifyEmailActivity"
             android:exported="false" />
         <activity
             android:name=".SignUp"
