--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
+materialCalendarview = "2.0.1"
 navigationFragmentKtx = "2.8.4"
 navigationUiKtx = "2.8.4"
 recyclerview = "1.3.2"
@@ -32,6 +33,7 @@ androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview"
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 firebase-database-ktx = { group = "com.google.firebase", name = "firebase-database-ktx", version.ref = "firebaseDatabaseKtx" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
+calendarview = { group = "com.github.kizitonwose", name = "CalendarView", version = "1.0.2" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
